Add initial APIs for create/get on lobby
