# internal/api/api.go
@@ -4,13 +4,12 @@ import (
 	"context"
 	"encoding/json"
 	"github.com/mcoot/crosswordgame-go/internal/apitypes"
-	"github.com/mcoot/crosswordgame-go/internal/errors"
+	"github.com/mcoot/crosswordgame-go/internal/apiutils"
 	"github.com/mcoot/crosswordgame-go/internal/game"
 	"github.com/mcoot/crosswordgame-go/internal/game/types"
 	"github.com/mcoot/crosswordgame-go/internal/lobby"
-	"github.com/mcoot/crosswordgame-go/internal/logging"
+	lobbytypes "github.com/mcoot/crosswordgame-go/internal/lobby/types"
 	playertypes "github.com/mcoot/crosswordgame-go/internal/player/types"
-	"go.uber.org/zap"
 	"net/http"
 	"time"
 )
@@ -31,12 +30,16 @@ func NewCrosswordGameAPI(gameManager *game.Manager, lobbyManager *lobby.Manager)
 
 func (c *CrosswordGameAPI) AttachToMux(ctx context.Context, mux *http.ServeMux, schemaPath string) (http.Handler, error) {
 	mux.Handle("GET /health", http.HandlerFunc(c.Healthcheck))
+
 	mux.Handle("POST /api/v1/game", http.HandlerFunc(c.CreateGame))
 	mux.Handle("GET /api/v1/game/{gameId}", http.HandlerFunc(c.GetGameState))
 	mux.Handle("GET /api/v1/game/{gameId}/player/{playerId}", http.HandlerFunc(c.GetPlayerState))
 	mux.Handle("POST /api/v1/game/{gameId}/player/{playerId}/announce", http.HandlerFunc(c.SubmitAnnouncement))
 	mux.Handle("POST /api/v1/game/{gameId}/player/{playerId}/place", http.HandlerFunc(c.SubmitPlacement))
 	mux.Handle("GET /api/v1/game/{gameId}/player/{playerId}/score", http.HandlerFunc(c.GetPlayerScore))
+
+	mux.Handle("POST /api/v1/lobby", http.HandlerFunc(c.CreateLobby))
+	mux.Handle("GET /api/v1/lobby/{lobbyId}", http.HandlerFunc(c.GetLobbyState))
 
 	h, err := setupMiddleware(ctx, mux, schemaPath)
 	if err != nil {
@@ -46,24 +49,18 @@ func (c *CrosswordGameAPI) AttachToMux(ctx context.Context, mux *http.ServeMux, 
 }
 
 func (c *CrosswordGameAPI) Healthcheck(w http.ResponseWriter, r *http.Request) {
-	logger := c.getLogger(r)
-
-	w.WriteHeader(200)
-	if err := json.NewEncoder(w).Encode(apitypes.HealthcheckResponse{
+	apiutils.SendResponse(apiutils.GetApiLogger(r), w, &apitypes.HealthcheckResponse{
 		Status:    "ok",
 		StartTime: c.startTime.Format(time.RFC3339),
-	}); err != nil {
-		logger.Errorw("error encoding response", "error", err)
-		return
-	}
+	}, 200)
 }
 
 func (c *CrosswordGameAPI) CreateGame(w http.ResponseWriter, r *http.Request) {
-	logger := c.getLogger(r)
+	logger := apiutils.GetApiLogger(r)
 
 	var req apitypes.CreateGameRequest
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
-		c.sendError(logger, w, err)
+		apiutils.SendError(logger, w, err)
 		return
 	}
 
@@ -74,24 +71,22 @@ func (c *CrosswordGameAPI) CreateGame(w http.ResponseWriter, r *http.Request) {
 
 	gameId, err := c.gameManager.NewGame(req.Players, boardDimension)
 	if err != nil {
-		c.sendError(logger, w, err)
+		apiutils.SendError(logger, w, err)
 		return
 	}
 
-	w.WriteHeader(201)
-	if err := json.NewEncoder(w).Encode(apitypes.CreateGameResponse{GameId: gameId}); err != nil {
-		logger.Errorw("error encoding response", "error", err)
-		return
-	}
+	w.Header().Add("Location", "/api/v1/game/"+string(gameId))
+
+	apiutils.SendResponse(logger, w, apitypes.CreateGameResponse{GameId: gameId}, 201)
 }
 
 func (c *CrosswordGameAPI) GetGameState(w http.ResponseWriter, r *http.Request) {
-	logger := c.getLogger(r)
+	logger := apiutils.GetApiLogger(r)
 	gameId := getGameId(r)
 
 	gameState, err := c.gameManager.GetGameState(gameId)
 	if err != nil {
-		c.sendError(logger, w, err)
+		apiutils.SendError(logger, w, err)
 		return
 	}
 
@@ -102,21 +97,17 @@ func (c *CrosswordGameAPI) GetGameState(w http.ResponseWriter, r *http.Request) 
 		Players:                 gameState.Players,
 	}
 
-	w.WriteHeader(200)
-	if err := json.NewEncoder(w).Encode(resp); err != nil {
-		logger.Errorw("error encoding response", "error", err)
-		return
-	}
+	apiutils.SendResponse(logger, w, resp, 200)
 }
 
 func (c *CrosswordGameAPI) GetPlayerState(w http.ResponseWriter, r *http.Request) {
-	logger := c.getLogger(r)
+	logger := apiutils.GetApiLogger(r)
 	gameId := getGameId(r)
 	playerId := getPlayerId(r)
 
 	playerState, err := c.gameManager.GetPlayerBoard(gameId, playerId)
 	if err != nil {
-		c.sendError(logger, w, err)
+		apiutils.SendError(logger, w, err)
 		return
 	}
 
@@ -124,69 +115,57 @@ func (c *CrosswordGameAPI) GetPlayerState(w http.ResponseWriter, r *http.Request
 		Board: playerState.Data,
 	}
 
-	w.WriteHeader(200)
-	if err := json.NewEncoder(w).Encode(resp); err != nil {
-		logger.Errorw("error encoding response", "error", err)
-		return
-	}
+	apiutils.SendResponse(logger, w, resp, 200)
 }
 
 func (c *CrosswordGameAPI) SubmitAnnouncement(w http.ResponseWriter, r *http.Request) {
-	logger := c.getLogger(r)
+	logger := apiutils.GetApiLogger(r)
 	gameId := getGameId(r)
 	playerId := getPlayerId(r)
 
 	var req apitypes.SubmitAnnouncementRequest
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
-		c.sendError(logger, w, err)
+		apiutils.SendError(logger, w, err)
 		return
 	}
 
 	err := c.gameManager.SubmitAnnouncement(gameId, playerId, req.Letter)
 	if err != nil {
-		c.sendError(logger, w, err)
+		apiutils.SendError(logger, w, err)
 		return
 	}
 
-	w.WriteHeader(200)
-	if err := json.NewEncoder(w).Encode(&apitypes.SubmitAnnouncementResponse{}); err != nil {
-		logger.Errorw("error encoding response", "error", err)
-		return
-	}
+	apiutils.SendResponse(logger, w, &apitypes.SubmitAnnouncementResponse{}, 200)
 }
 
 func (c *CrosswordGameAPI) SubmitPlacement(w http.ResponseWriter, r *http.Request) {
-	logger := c.getLogger(r)
+	logger := apiutils.GetApiLogger(r)
 	gameId := getGameId(r)
 	playerId := getPlayerId(r)
 
 	var req apitypes.SubmitPlacementRequest
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
-		c.sendError(logger, w, err)
+		apiutils.SendError(logger, w, err)
 		return
 	}
 
 	err := c.gameManager.SubmitPlacement(gameId, playerId, req.Row, req.Column)
 	if err != nil {
-		c.sendError(logger, w, err)
+		apiutils.SendError(logger, w, err)
 		return
 	}
 
-	w.WriteHeader(200)
-	if err := json.NewEncoder(w).Encode(&apitypes.SubmitPlacementResponse{}); err != nil {
-		logger.Errorw("error encoding response", "error", err)
-		return
-	}
+	apiutils.SendResponse(logger, w, &apitypes.SubmitPlacementResponse{}, 200)
 }
 
 func (c *CrosswordGameAPI) GetPlayerScore(w http.ResponseWriter, r *http.Request) {
-	logger := c.getLogger(r)
+	logger := apiutils.GetApiLogger(r)
 	gameId := getGameId(r)
 	playerId := getPlayerId(r)
 
 	totalScore, words, err := c.gameManager.GetPlayerScore(gameId, playerId)
 	if err != nil {
-		c.sendError(logger, w, err)
+		apiutils.SendError(logger, w, err)
 		return
 	}
 
@@ -195,59 +174,47 @@ func (c *CrosswordGameAPI) GetPlayerScore(w http.ResponseWriter, r *http.Request
 		Words:      words,
 	}
 
-	w.WriteHeader(200)
-	if err := json.NewEncoder(w).Encode(resp); err != nil {
-		logger.Errorw("error encoding response", "error", err)
+	apiutils.SendResponse(logger, w, resp, 200)
+}
+
+func (c *CrosswordGameAPI) CreateLobby(w http.ResponseWriter, r *http.Request) {
+	logger := apiutils.GetApiLogger(r)
+
+	var req apitypes.CreateLobbyRequest
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		apiutils.SendError(logger, w, err)
 		return
 	}
-}
 
-func (c *CrosswordGameAPI) sendError(logger *zap.SugaredLogger, w http.ResponseWriter, err error) {
-	var resp apitypes.ErrorResponse
-	gameErr, ok := errors.AsGameError(err)
-	if ok {
-		resp = apitypes.ErrorResponse{
-			Kind:     string(gameErr.Kind()),
-			Message:  gameErr.Message(),
-			HTTPCode: c.determineHttpErrorCode(gameErr),
-		}
-	} else {
-		resp = apitypes.ErrorResponse{
-			Kind:     "internal_error",
-			Message:  err.Error(),
-			HTTPCode: 500,
-		}
-	}
-
-	logger.Warnw(
-		"error handling request",
-		"message", resp.Message,
-		"http_code", resp.HTTPCode,
-		"kind", resp.Kind,
-	)
-	w.WriteHeader(resp.HTTPCode)
-	if err := json.NewEncoder(w).Encode(resp); err != nil {
-		logger.Errorw("error encoding response", "error", err)
+	lobbyId, err := c.lobbyManager.NewLobby(req.Name)
+	if err != nil {
+		apiutils.SendError(logger, w, err)
 		return
 	}
+
+	w.Header().Add("Location", "/api/v1/lobby/"+string(lobbyId))
+	apiutils.SendResponse(logger, w, apitypes.CreateLobbyResponse{LobbyId: lobbyId}, 201)
 }
 
-func (c *CrosswordGameAPI) determineHttpErrorCode(gameErr errors.GameError) int {
-	switch gameErr.Kind() {
-	case errors.GameErrorInvalidInput:
-		return 400
-	case errors.GameErrorNotFound:
-		return 404
-	case errors.GameErrorInvalidAction:
-		return 400
-	default:
-		return 500
+func (c *CrosswordGameAPI) GetLobbyState(w http.ResponseWriter, r *http.Request) {
+	logger := apiutils.GetApiLogger(r)
+	lobbyId := getLobbyId(r)
+
+	lobbyState, err := c.lobbyManager.GetLobbyState(lobbyId)
+	if err != nil {
+		apiutils.SendError(logger, w, err)
+		return
 	}
-}
 
-func (c *CrosswordGameAPI) getLogger(r *http.Request) *zap.SugaredLogger {
-	return logging.GetLogger(r.Context(), "api").
-		With("path", r.URL.Path)
+	resp := apitypes.GetLobbyStateResponse{
+		Name:    lobbyState.Name,
+		Players: lobbyState.Players,
+	}
+	if lobbyState.RunningGame != nil {
+		resp.GameID = lobbyState.RunningGame.GameId
+	}
+
+	apiutils.SendResponse(logger, w, resp, 200)
 }
 
 func getGameId(r *http.Request) types.GameId {
@@ -256,4 +223,8 @@ func getGameId(r *http.Request) types.GameId {
 
 func getPlayerId(r *http.Request) playertypes.PlayerId {
 	return playertypes.PlayerId(r.PathValue("playerId"))
+}
+
+func getLobbyId(r *http.Request) lobbytypes.LobbyId {
+	return lobbytypes.LobbyId(r.PathValue("lobbyId"))
 }
